Fixing some more layout issues.

--- a/static/global/style.css
+++ b/static/global/style.css
@@ -277,6 +277,7 @@ h5 {
 /* HEADER */
 #top-nav-container{
 background-color: #000000;
+color: #fff;
 }
 
 #top-nav{
